tests/fail/ch_stable/raw_string.stderr
error: Missing Type for given '{}' Placeholder:
At r#"asdf{}asdf"#
          ^^
 --> $DIR/raw_string.rs:2:26
  |
2 |     sscanf::scanf!("hi", r#"asdf{}asdf"#);
  |                          ^^^^^^^^^^^^^^^
